src/css/components/3_organisms/header.css
/* ... */
.c-submenu {
  --max-submenu-padding: calc( var( --site-top-offset ) + var( --site-banner-height ) + var( --site-topbar-height ) + var( --site-header-height ) );
  --scroll-adjusted-padding: calc( var( --max-submenu-padding ) - var( --site-scroll-y, 0px ) );
  --min-submenu-padding: calc( var( --site-top-offset ) + var( --site-header-height ) );
  background-color: #ffffff;
  display: initial;
  left: -9999px;
  opacity: 0;
  overflow-x: hidden;
  overflow-y: scroll;
  padding-top: clamp(var(--min-submenu-padding), var(--scroll-adjusted-padding), var(--max-submenu-padding));
  position: absolute;
  top: -9999px;
  transform: translateY(-100px);
  transition: opacity 0.175s ease-out, transform 0.25s ease-out;
  will-change: position, transform;
}
@media (max-width: 61.99em) {
  .c-submenu {
    display: none;
  }
}
.c-submenu.active {
  bottom: 0;
  left: 0;
  opacity: 1;
  position: fixed;
  right: 0;
  top: 0;
  transform: translateY(0px);
}
.c-submenu:focus-within {
  bottom: 0;
  left: 0;
  opacity: 1;
  position: fixed;
  right: 0;
  top: 0;
  transform: translateY(0px);
}
.c-submenu:after {
  border-top: 1px solid var(--divider-color);
  content: "";
  display: block;
  height: 0;
  margin: 0 -16px;
}
.c-submenu .o-layout__colset {
  justify-content: center;
}
.c-submenu .o-layout__col {
  border-left: 1px solid #ededf4;
  grid-row: 2/-1;
  padding: 16px;
}
.c-submenu .o-layout__col:first-child {
  border-left: none;
  padding-left: 0;
}
.c-submenu .o-layout__module:where(:not(:first-child)) {
  margin-top: 32px;
}
.c-submenu h6 {
  color: #999b9d;
  font-family: "Source Sans Pro", sans-serif;
  font-size: 12px;
  letter-spacing: 0;
  letter-spacing: 2px;
  line-height: 1.3333333333;
  margin: 16px 0;
  text-transform: uppercase;
}
.c-submenu a.current, .c-submenu a:hover {
  color: #02b159;
}
.c-submenu .o-menu__item {
  clear: both;
}
.c-submenu .o-menu__item:where(:not(:first-child)) {
  margin-top: 8px;
}
.c-submenu .o-menu__title {
  display: block;
}
.c-submenu .o-menu__title .icon {
  float: left;
  height: 48px;
  margin-right: 16px;
  overflow: hidden;
  width: 48px;
}
.c-submenu .o-menu__title .body {
  display: block;
  overflow: hidden;
}
.c-submenu .o-menu__title .description {
  display: block;
}
.c-submenu .c-featured {
  align-items: center;
  border: var(--c-featured-border-width, 0) solid var(--c-featured-border-color, transparent);
  border-radius: 8px;
  color: var(--c-featured-color, #32363b);
  display: flex;
  max-width: 565px;
  overflow: hidden;
  padding: 16px 24px 24px;
  position: relative;
}
.c-submenu .c-featured__background {
  height: 100%;
  left: 0;
  -o-object-fit: cover;
     object-fit: cover;
  -o-object-position: center center;
     object-position: center center;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 0;
}
.c-submenu .c-featured__image {
  flex: none;
  height: auto;
  max-width: 33%;
  order: 1;
  padding-left: 24px;
  position: relative;
  width: 100%;
}
.c-submenu .c-featured__text {
  flex: 1 1 100%;
  order: 0;
  position: relative;
  width: 100%;
}
.c-submenu .c-featured__headline {
  font-family: "Source Sans Pro", sans-serif;
  font-size: 32px;
  line-height: 1.125;
  margin-bottom: 8px;
}
.c-submenu .c-featured__excerpt {
  font-family: "Source Sans Pro", sans-serif;
  font-size: 14px;
  letter-spacing: 0;
  line-height: 1.4285714286;
  margin-bottom: 16px;
}
.c-submenu .c-featured__button {
  background-color: #02b159;
  border: 0 solid;
  border-radius: 4px;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-size: 13px;
  font-weight: 600;
  line-height: 1.538461538;
  padding: 10px 20px;
  text-align: center;
  white-space: nowrap;
  width: auto;
}
.c-submenu .c-featured:hover, .c-submenu .c-featured:visited {
  color: var(--c-featured-color, #32363b);
}
.c-submenu .o-link--arrow {
  align-items: center;
  display: flex;
  font-weight: 600;
}
.c-submenu .o-link--arrow:after {
  content: url("data:image/svg+xml;utf8,<svg viewBox='0 0 7 12' version='1.1' xmlns='http://www.w3.org/2000/svg'><path d='M6.87 6.319l-5.39 5.549a.435.435 0 0 1-.624 0l-.727-.743a.457.457 0 0 1 0-.637L4.48 6 .13 1.512a.457.457 0 0 1 0-.637L.855.132a.435.435 0 0 1 .625 0l5.39 5.55a.457.457 0 0 1 0 .637z' fill='%2302b159' fill-rule='nonzero'/></svg>");
  display: inline-block;
  height: auto;
  margin-left: 0.5em;
  width: 7px;
}
.c-submenu--2col .o-layout__colset {
  grid-template-columns: 46% max-content;
}
.c-submenu--3col .o-layout__colset {
  grid-template-columns: 46% 27% 27%;
}
.c-submenu--4col .o-layout__colset {
  grid-template-columns: 46% 18% 18% 18%;
}
.c-submenu--mobile {
  display: none;
  grid-template-columns: 100%;
  grid-template-rows: 1fr min-content min-content min-content;
}
@media (max-width: 61.99em) {
  .c-submenu--mobile {
    display: grid;
  }
}
.c-submenu--mobile:after {
  display: none;
}
.c-submenu--mobile > .o-layout__module {
  margin: 0;
}
.c-submenu--mobile .o-menu__item {
  margin: 0;
}
.c-submenu--mobile .o-menu__title {
  flex: 1;
  font-weight: 600;
  line-height: 1;
}
.c-submenu--mobile .o-menu__toggle::after {
  width: 24px;
}
.c-submenu--mobile :where(#submenu-mobile-primary).o-layout__module {
  overflow-x: scroll;
}
.c-submenu--mobile :where(#submenu-mobile-primary) .o-menu__link {
  line-height: 1;
  padding-block: 0.5em;
}
.c-submenu--mobile :where(#submenu-mobile-primary) .o-menu__link.active {
  color: #02b159;
}
.c-submenu--mobile :where(#submenu-mobile-primary) .o-menu__link.active::after {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' aria-hidden='true' data-prefix='far' data-icon='angle-down' role='img' viewBox='0 0 320 512' class='svg-inline--fa fa-angle-down fa-w-10 fa-7x'%3E%3Cpath fill='rgba(2,177,89)' d='M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z' class=''%3E%3C/path%3E%3C/svg%3E");
}
/* ... */

